@@ -6,6 +6,12 @@
    Now only resolves the parent directory for symlinks, matching Git's behavior.
    (Jelmer Vernooĳ, #789)
 
+ * Fix ``porcelain.add()`` when adding repository root path. Previously, adding
+   the repository path itself would incorrectly stage ``b'./'`` instead of the
+   actual untracked files, leading to repository corruption. Now correctly adds
+   all untracked files in the repository root when the root path is specified.
+   (Jelmer Vernooĳ, #1178)
+
  * Fix gitignore pattern matching for directory negation patterns. Patterns like
    ``!data/*/`` now correctly unignore direct subdirectories while still ignoring
    files in the parent directory, matching Git's behavior. The ``is_ignored()`` method
